ajout page slide horizontale

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sae 303</title>
+    <title>SAE 303 - Tourisme</title>
   </head>
   <body>
-    <script type="module" src="/src/main.js"></script>
-<!-- scrool horizontale -->
+    
     <header>
       <section class="accueil">
         <h1 class="accueil__title">Les datas</h1>
@@ -32,44 +31,43 @@
         </figure>
       </section>
 
-<!-- scroll vertical -->
-      <section class="info__train">
-        <section class="info__train__text">
-          <p class="info__train__desc">Tu savais que les trains ne représentent que <span>2 %</span> de l’empreinte carbone des transports ?</p>
-          <p class="info__train__desc">Pourtant, seuls <span>11 %</span> des voyageurs choisissent le train. Étonnant, non ?</p>
-        </section>
-        <section class="info__train__train">
-          <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
-          <dotlottie-wc src="https://lottie.host/5bf5de61-8f69-406d-9bca-9ef88cecea15/EYkIdlzKVc.lottie" style="width: 100% ; height: 422px" autoplay loop></dotlottie-wc>
-        </section>
-      </section>
+      <div class="horizontal-scroll-container">
+        <div class="horizontal-wrapper">
 
+          <section class="info__train panel">
+            <section class="info__train__text box-text">
+              <p class="info__train__desc">Tu savais que les trains ne représentent que <span>2 %</span> de l’empreinte carbone des transports ?</p>
+              <p class="info__train__desc">Pourtant, seuls <span>11 %</span> des voyageurs choisissent le train. Étonnant, non ?</p>
+            </section>
+            <section class="info__train__train box-anim">
+              <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+              <dotlottie-wc src="https://lottie.host/5bf5de61-8f69-406d-9bca-9ef88cecea15/EYkIdlzKVc.lottie" autoplay loop></dotlottie-wc>
+            </section>
+          </section>
 
-      <section class="info__voiture">
-        <section class="info__voiture__text">
-          <p class="info__voiture__desc">Oh ! Et tu veux un autre chiffre ? Les voitures polluent à <span>32 %</span> de l’empreinte carbone totale. Oui oui, trente-deux ! Ça fait réfléchir, hein ?</p>
-        </section>
-        <section class="info__voiture__voiture">
-          <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
-          <dotlottie-wc src="https://lottie.host/576db4bf-ed4b-44e0-b3e9-2f5e16e05287/KFSKlDIKlh.lottie" style="width: 100% ; height: 422px" autoplay loop></dotlottie-wc>  
-        </section>
-      </section>
+          <section class="info__voiture panel">
+            <section class="info__voiture__text box-text">
+              <p class="info__voiture__desc">Oh ! Et tu veux un autre chiffre ? Les voitures polluent à <span>32 %</span> de l’empreinte carbone totale. Oui oui, trente-deux ! Ça fait réfléchir, hein ?</p>
+            </section>
+            <section class="info__voiture__voiture box-anim">
+              <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+              <dotlottie-wc src="https://lottie.host/576db4bf-ed4b-44e0-b3e9-2f5e16e05287/KFSKlDIKlh.lottie" autoplay loop></dotlottie-wc>  
+            </section>
+          </section>
 
+          <section class="info__avion panel">
+            <section class="info__avion__text box-text">
+              <p class="info__avion__desc"> Et le pire… ce sont les avions : ils représentent entre <span>50</span> et <span>60 %</span> de l’empreinte carbone des transports.</p>
+            </section>
+            <section class="info__avion__avion box-anim">
+              <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+              <dotlottie-wc src="https://lottie.host/9ae79886-a657-45d3-b543-50aa8a1d3afb/PSoFcypQLf.lottie" autoplay loop></dotlottie-wc>
+            </section>
+          </section>
 
-      <section class="info__avion">
-        <section class="info__avion__text">
-          <p class="info__avion__desc"> Et le pire… ce sont les avions : ils représentent entre <span>50</span> et <span>60 %</span> de l’empreinte carbone des transports.</p>
-        </section>
-        <section class="info__avion__avion">
-          <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
-          <dotlottie-wc src="https://lottie.host/9ae79886-a657-45d3-b543-50aa8a1d3afb/PSoFcypQLf.lottie" style="width: 100% ;height: 422px" autoplay loop></dotlottie-wc>
-        </section>
-      </section>
-
-      <!-- retour du scrool horizontale -->
-    </main>
-    
+        </div>
+      </div>
+      </main>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
-
