--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
     </header>
 
     <main>
-      <section class="presentation">
+      <section class="presentation-section">
         <h1 class="title">Le tourisme vu par la Terre</h1>
-        <figure class="presentation__fig">
-          <img
-            class="presentation__fig__img"
-            src="/assets/mascotte1.svg"
-            alt="Image de la terre"
-          />
+        <div class="presentation">
+          <figure class="presentation__fig">
+            <img
+              class="presentation__fig__img"
+              src="/assets/mascotte1.svg"
+              alt="Image de la terre"
+            />
 
-          <figcaption class="presentation__fig__text">
-            <div class="presentation__fig__bulle">
-              <p class="presentation__fig__desc">
-                Salut ! Moi, c’est la Terre. J’observe tout, je vois tout… et
-                aujourd’hui, je vais te parler des aspects négatifs du tourisme.
-              </p>
-            </div>
-          </figcaption>
-        </figure>
+            <figcaption class="presentation__fig__text">
+              <div class="presentation__fig__bulle">
+                <p class="presentation__fig__desc">
+                  Salut ! Moi, c’est la Terre. J’observe tout, je vois tout… et
+                  aujourd’hui, je vais te parler des aspects négatifs du tourisme.
+                </p>
+              </div>
+            </figcaption>
+          </figure>
+        </div>
       </section>
 
       <div class="horizontal-scroll-container">
